k8s/addons/observability/ingress/base/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: observability
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - alertmanager.internal
      secretName: alertmanager-internal-tls
  rules:
    - host: alertmanager.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
