k8s/addons/observability/ingress/base/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.internal
      secretName: grafana-internal-tls
  rules:
    - host: grafana.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-grafana
                port:
                  number: 80
