k8s/addons/observability/ingress/base/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.internal
      secretName: prometheus-internal-tls
  rules:
    - host: prometheus.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-kube-prometheus-stack-prometheus
                port:
                  number: 9090
